[WIP] improve ANNIF training on concepts and chains

--- a/ANNIF/projects.cfg
+++ b/ANNIF/projects.cfg
@@ -1,4 +1,5 @@
 # Example configuration for Annif
+## Analyzer = Snowball
 [rameau-tfidf-snowball-fr]
 name=TF-IDF French RAMEAU with snowball lemma
 language=fr
@@ -7,7 +8,44 @@ analyzer=snowball(french)
 limit=100
 vocab=rameau
 
-[rameau-tfidf-spacy-fr]
+[rameau-fasttext-snowball-fr]
+name=FastText French RAMEAU
+language=fr
+backend=fasttext
+analyzer=snowball(french)
+dim=500
+lr=0.25
+epoch=30
+loss=hs
+limit=100
+chunksize=24
+vocab=rameau
+
+[rameau-yake-snowball-fr]
+name=Yake French RAMEAU
+language=fr
+backend=yake
+analyzer=snowball(french)
+limit=100
+vocab=rameau
+
+[rameau-mllm-snowball-fr]
+name=RAMEAU MLLM project
+language=fr
+backend=mllm
+analyzer=snowball(french)
+vocab=rameau
+
+[rameau-omikuji-snowball-fr]
+name=Omikuji Parabel French
+language=fr
+backend=omikuji
+analyzer=snowball(french)
+vocab=rameau
+
+
+## Analyzer = Spacy
+[rameau-tfidf-fr]
 name=TF-IDF French RAMEAU with spacy lemma
 language=fr
 backend=tfidf
@@ -28,10 +66,10 @@ limit=100
 chunksize=24
 vocab=rameau
 
-[rameau-svc-fr]
-name=SVC French RAMEAU
+[rameau-yake-fr]
+name=Yake French RAMEAU
 language=fr
-backend=french
+backend=yake
 analyzer=spacy(fr_core_news_md)
 limit=100
 vocab=rameau
@@ -49,8 +87,12 @@ language=fr
 backend=mllm
 analyzer=spacy(fr_core_news_md)
 vocab=rameau
+min_samples_leaf=19
+max_leaf_nodes=1764
+max_samples=0.726630
 
 
+### Ensembles
 [rameau-ensemble-mllm-fr]
 name=RAMEAU ensemble with MLLM French
 language=fr
@@ -61,6 +103,58 @@ nodes=100
 dropout_rate=0.2
 epochs=10
 
+[rameau-simple-ensemble-fasttext-fr]
+name=RAMEAU ensemble with Fasttext French
+language=fr
+backend=ensemble
+sources=rameau-tfidf-fr:0.6770,rameau-fasttext-fr:0.3230
+vocab=rameau
+nodes=100
+dropout_rate=0.2
+epochs=50
+
+[rameau-simple-ensemble-all-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=ensemble
+sources=rameau-tfidf-fr:0.0156,rameau-fasttext-fr:0.1232,rameau-mllm-fr:0.2030,rameau-omikuji-parabel-fr:0.658
+vocab=rameau
+nodes=100
+dropout_rate=0.2
+epochs=50
+
+[rameau-simple-ensemble-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=ensemble
+sources=rameau-tfidf-snowball-fr:0.0052,rameau-mllm-snowball-fr:0.5023,rameau-omikuji-snowball-fr:0.4924
+vocab=rameau
+nodes=100
+dropout_rate=0.2
+epochs=50
+
+[rameau-simple-ensemble-mllm-fr]
+name=RAMEAU ensemble with MLLM French
+language=fr
+backend=ensemble
+sources=rameau-tfidf-fr:0.7775,rameau-mllm-fr:0.2225
+vocab=rameau
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+### NN ensemble
+[rameau-ensemble-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=nn_ensemble
+sources=rameau-tfidf-snowball-fr:0.0052,rameau-mllm-snowball-fr:0.5023,rameau-omikuji-snowball-fr:0.4924
+vocab=rameau
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+
 [rameau-ensemble-fasttext-fr]
 name=RAMEAU ensemble with FastText French
 language=fr
@@ -70,3 +164,23 @@ vocab=rameau
 nodes=100
 dropout_rate=0.2
 epochs=10
+
+
+### PAV
+[rameau-pav-MLLM-fr]
+name=RAMEAU PAV ensemble project with MLLM
+language=fr
+backend=pav
+vocab=rameau
+sources=rameau-tfidf-fr:1,rameau-mllm-fr:2
+min-docs=3
+limit=100
+
+[rameau-pav-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=pav
+sources=rameau-tfidf-snowball-fr:0.0052,rameau-mllm-snowball-fr:0.5023,rameau-omikuji-snowball-fr:0.4924
+vocab=rameau
+min-docs=3
+limit=100
