update work on ANNIF, including chains predictions

--- a/ANNIF/projects.cfg
+++ b/ANNIF/projects.cfg
@@ -35,6 +35,9 @@ language=fr
 backend=mllm
 analyzer=snowball(french)
 vocab=rameau
+min_samples_leaf=13
+max_leaf_nodes=1015
+max_samples=0.6623
 
 [rameau-omikuji-snowball-fr]
 name=Omikuji Parabel French
@@ -87,9 +90,9 @@ language=fr
 backend=mllm
 analyzer=spacy(fr_core_news_md)
 vocab=rameau
-min_samples_leaf=19
-max_leaf_nodes=1764
-max_samples=0.726630
+min_samples_leaf=21
+max_leaf_nodes=653
+max_samples=0.6034
 
 
 ### Ensembles
@@ -111,7 +114,7 @@ sources=rameau-tfidf-fr:0.6770,rameau-fasttext-fr:0.3230
 vocab=rameau
 nodes=100
 dropout_rate=0.2
-epochs=50
+epochs=10
 
 [rameau-simple-ensemble-all-fr]
 name=RAMEAU ensemble French
@@ -121,17 +124,28 @@ sources=rameau-tfidf-fr:0.0156,rameau-fasttext-fr:0.1232,rameau-mllm-fr:0.2030,r
 vocab=rameau
 nodes=100
 dropout_rate=0.2
-epochs=50
+epochs=10
 
 [rameau-simple-ensemble-allButFastext-fr]
 name=RAMEAU ensemble French
 language=fr
 backend=ensemble
-sources=rameau-tfidf-snowball-fr:0.0052,rameau-mllm-snowball-fr:0.5023,rameau-omikuji-snowball-fr:0.4924
+sources=rameau-tfidf-snowball-fr:0.0812,rameau-mllm-snowball-fr:0.4776,rameau-omikuji-snowball-fr:0.4412
 vocab=rameau
 nodes=100
 dropout_rate=0.2
-epochs=50
+epochs=10
+
+[rameau-simple-ensemble-mllmSpacy-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=ensemble
+sources=rameau-tfidf-snowball-fr,rameau-mllm-fr,rameau-omikuji-snowball-fr
+vocab=rameau
+nodes=100
+dropout_rate=0.2
+epochs=10
+
 
 [rameau-simple-ensemble-mllm-fr]
 name=RAMEAU ensemble with MLLM French
@@ -148,7 +162,17 @@ epochs=10
 name=RAMEAU ensemble French
 language=fr
 backend=nn_ensemble
-sources=rameau-tfidf-snowball-fr:0.0052,rameau-mllm-snowball-fr:0.5023,rameau-omikuji-snowball-fr:0.4924
+sources=rameau-tfidf-snowball-fr:0.0812,rameau-mllm-snowball-fr:0.4776,rameau-omikuji-snowball-fr:0.4412
+vocab=rameau
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+[rameau-ensemble-mllmSpacy-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=nn_ensemble
+sources=rameau-tfidf-snowball-fr:0.0137,rameau-mllm-fr:0.2426,rameau-omikuji-snowball-fr:0.7437
 vocab=rameau
 nodes=100
 dropout_rate=0.2
@@ -180,7 +204,233 @@ limit=100
 name=RAMEAU ensemble French
 language=fr
 backend=pav
-sources=rameau-tfidf-snowball-fr:0.0052,rameau-mllm-snowball-fr:0.5023,rameau-omikuji-snowball-fr:0.4924
+sources=rameau-tfidf-snowball-fr:0.0812,rameau-mllm-snowball-fr:0.4776,rameau-omikuji-snowball-fr:0.4412
 vocab=rameau
 min-docs=3
 limit=100
+
+[rameau-pav-mllmSpacy-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=pav
+sources=rameau-tfidf-snowball-fr:0.0137,rameau-mllm-fr:0.2426,rameau-omikuji-snowball-fr:0.7437
+vocab=rameau
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+
+## Same on concepts + chains (vocab rameau-chains)
+## Analyzer = Snowball
+[rameau-chains-tfidf-snowball-fr]
+name=TF-IDF French RAMEAU with snowball lemma
+language=fr
+backend=tfidf
+analyzer=snowball(french)
+limit=100
+vocab=rameau-chains
+
+[rameau-chains-fasttext-snowball-fr]
+name=FastText French RAMEAU
+language=fr
+backend=fasttext
+analyzer=snowball(french)
+dim=500
+lr=0.25
+epoch=30
+loss=hs
+limit=100
+chunksize=24
+vocab=rameau-chains
+
+[rameau-chains-yake-snowball-fr]
+name=Yake French RAMEAU
+language=fr
+backend=yake
+analyzer=snowball(french)
+limit=100
+vocab=rameau-chains
+
+[rameau-chains-mllm-snowball-fr]
+name=RAMEAU MLLM project
+language=fr
+backend=mllm
+analyzer=snowball(french)
+vocab=rameau-chains
+
+[rameau-chains-omikuji-snowball-fr]
+name=Omikuji Parabel French
+language=fr
+backend=omikuji
+analyzer=snowball(french)
+vocab=rameau-chains
+
+
+## Analyzer = Spacy
+[rameau-chains-tfidf-fr]
+name=TF-IDF French RAMEAU with spacy lemma
+language=fr
+backend=tfidf
+analyzer=spacy(fr_core_news_md)
+limit=100
+vocab=rameau-chains
+
+[rameau-chains-fasttext-fr]
+name=FastText French RAMEAU
+language=fr
+backend=fasttext
+analyzer=spacy(fr_core_news_md)
+dim=500
+lr=0.25
+epoch=30
+loss=hs
+limit=100
+chunksize=24
+vocab=rameau-chains
+
+[rameau-chains-yake-fr]
+name=Yake French RAMEAU
+language=fr
+backend=yake
+analyzer=spacy(fr_core_news_md)
+limit=100
+vocab=rameau-chains
+
+[rameau-chains-omikuji-parabel-fr]
+name=Omikuji Parabel French
+language=fr
+backend=omikuji
+analyzer=spacy(fr_core_news_md)
+vocab=rameau-chains
+
+[rameau-chains-mllm-fr]
+name=RAMEAU MLLM project
+language=fr
+backend=mllm
+analyzer=spacy(fr_core_news_md)
+vocab=rameau-chains
+
+
+### Ensembles
+[rameau-chains-ensemble-mllm-fr]
+name=RAMEAU ensemble with MLLM French
+language=fr
+backend=nn_ensemble
+sources=rameau-chains-tfidf-fr,rameau-chains-mllm-fr:2
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+[rameau-chains-simple-ensemble-fasttext-fr]
+name=RAMEAU ensemble with Fasttext French
+language=fr
+backend=ensemble
+sources=rameau-chains-tfidf-fr,rameau-chains-fasttext-fr
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+[rameau-chains-simple-ensemble-all-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=ensemble
+sources=rameau-chains-tfidf-fr,rameau-chains-fasttext-fr,rameau-chains-mllm-fr,rameau-chains-omikuji-parabel-fr
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+[rameau-chains-simple-ensemble-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=ensemble
+sources=rameau-chains-tfidf-snowball-fr,rameau-chains-mllm-snowball-fr,rameau-chains-omikuji-snowball-fr
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+[rameau-chains-simple-ensemble-mllmSpacy-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=ensemble
+sources=rameau-chains-tfidf-snowball-fr,rameau-chains-mllm-fr,rameau-chains-omikuji-snowball-fr
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+
+[rameau-chains-simple-ensemble-mllm-fr]
+name=RAMEAU ensemble with MLLM French
+language=fr
+backend=ensemble
+sources=rameau-chains-tfidf-fr,rameau-chains-mllm-fr
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+### NN ensemble
+[rameau-chains-ensemble-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=nn_ensemble
+sources=rameau-chains-tfidf-snowball-fr:0.007775,rameau-chains-mllm-snowball-fr:0.004958,rameau-chains-omikuji-snowball-fr:0.987267
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+[rameau-chains-ensemble-mllmSpacy-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=nn_ensemble
+sources=rameau-chains-tfidf-snowball-fr:0.007775,rameau-chains-mllm-snowball-fr:0.004958,rameau-chains-omikuji-snowball-fr:0.987267
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+
+[rameau-chains-ensemble-fasttext-fr]
+name=RAMEAU ensemble with FastText French
+language=fr
+backend=nn_ensemble
+sources=rameau-chains-tfidf-fr,rameau-chains-fasttext-fr:2
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
+
+
+### PAV
+[rameau-chains-pav-MLLM-fr]
+name=RAMEAU PAV ensemble project with MLLM
+language=fr
+backend=pav
+vocab=rameau-chains
+sources=rameau-chains-tfidf-fr:1,rameau-chains-mllm-fr:2
+min-docs=3
+limit=100
+
+[rameau-chains-pav-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=pav
+sources=rameau-chains-tfidf-snowball-fr:0.007775,rameau-chains-mllm-snowball-fr:0.004958,rameau-chains-omikuji-snowball-fr:0.987267
+vocab=rameau-chains
+min-docs=3
+limit=100
+
+[rameau-chains-pav-mllmSpacy-allButFastext-fr]
+name=RAMEAU ensemble French
+language=fr
+backend=pav
+sources=rameau-chains-tfidf-snowball-fr,rameau-chains-mllm-fr,rameau-chains-omikuji-snowball-fr
+vocab=rameau-chains
+nodes=100
+dropout_rate=0.2
+epochs=10
