--- a/ANNIF/projects.cfg
+++ b/ANNIF/projects.cfg
@@ -1,7 +1,7 @@
 # Example configuration for Annif
 ## Analyzer = Snowball
 [rameau-tfidf-snowball-fr]
-name=TF-IDF French RAMEAU with snowball lemma
+name=RAMEAU-TFIDF(Snowball)
 language=fr
 backend=tfidf
 analyzer=snowball(french)
@@ -9,7 +9,7 @@ limit=100
 vocab=rameau
 
 [rameau-fasttext-snowball-fr]
-name=FastText French RAMEAU
+name=RAMEAU-FastText(Snowball)
 language=fr
 backend=fasttext
 analyzer=snowball(french)
@@ -21,16 +21,8 @@ limit=100
 chunksize=24
 vocab=rameau
 
-[rameau-yake-snowball-fr]
-name=Yake French RAMEAU
-language=fr
-backend=yake
-analyzer=snowball(french)
-limit=100
-vocab=rameau
-
 [rameau-mllm-snowball-fr]
-name=RAMEAU MLLM project
+name=RAMEAU-MLLM(Snowball)
 language=fr
 backend=mllm
 analyzer=snowball(french)
@@ -40,7 +32,7 @@ max_leaf_nodes=1015
 max_samples=0.6623
 
 [rameau-omikuji-snowball-fr]
-name=Omikuji Parabel French
+name=RAMEAU-Omikuji(Snowball)
 language=fr
 backend=omikuji
 analyzer=snowball(french)
@@ -49,7 +41,7 @@ vocab=rameau
 
 ## Analyzer = Spacy
 [rameau-tfidf-fr]
-name=TF-IDF French RAMEAU with spacy lemma
+name=RAMEAU-TFIDF(Spacy)
 language=fr
 backend=tfidf
 analyzer=spacy(fr_core_news_md)
@@ -57,7 +49,7 @@ limit=100
 vocab=rameau
 
 [rameau-fasttext-fr]
-name=FastText French RAMEAU
+name=RAMEAU-FastText(Spacy)
 language=fr
 backend=fasttext
 analyzer=spacy(fr_core_news_md)
@@ -69,23 +61,15 @@ limit=100
 chunksize=24
 vocab=rameau
 
-[rameau-yake-fr]
-name=Yake French RAMEAU
-language=fr
-backend=yake
-analyzer=spacy(fr_core_news_md)
-limit=100
-vocab=rameau
-
 [rameau-omikuji-parabel-fr]
-name=Omikuji Parabel French
+name=RAMEAU-Omikuji(Spacy)
 language=fr
 backend=omikuji
 analyzer=spacy(fr_core_news_md)
 vocab=rameau
 
 [rameau-mllm-fr]
-name=RAMEAU MLLM project
+name=RAMEAU-MLLM(Spacy)
 language=fr
 backend=mllm
 analyzer=spacy(fr_core_news_md)
@@ -97,7 +81,7 @@ max_samples=0.6034
 
 ### Ensembles
 [rameau-ensemble-mllm-fr]
-name=RAMEAU ensemble with MLLM French
+name=RAMEAU-TFIDF/MLLM-NNensemble
 language=fr
 backend=nn_ensemble
 sources=rameau-tfidf-fr,rameau-mllm-fr:2
@@ -107,7 +91,7 @@ dropout_rate=0.2
 epochs=10
 
 [rameau-simple-ensemble-fasttext-fr]
-name=RAMEAU ensemble with Fasttext French
+name=RAMEAU-TFID/FastText-SimpleEnsemble
 language=fr
 backend=ensemble
 sources=rameau-tfidf-fr:0.6770,rameau-fasttext-fr:0.3230
@@ -117,7 +101,7 @@ dropout_rate=0.2
 epochs=10
 
 [rameau-simple-ensemble-all-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-TFID/MLLM/Omikuji/FastText-SimpleEnsemble(Spacy)
 language=fr
 backend=ensemble
 sources=rameau-tfidf-fr:0.0156,rameau-fasttext-fr:0.1232,rameau-mllm-fr:0.2030,rameau-omikuji-parabel-fr:0.658
@@ -127,7 +111,7 @@ dropout_rate=0.2
 epochs=10
 
 [rameau-simple-ensemble-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-TFID/MLLM/Omikuji-SimpleEnsemble(Snowball)
 language=fr
 backend=ensemble
 sources=rameau-tfidf-snowball-fr:0.0812,rameau-mllm-snowball-fr:0.4776,rameau-omikuji-snowball-fr:0.4412
@@ -137,7 +121,7 @@ dropout_rate=0.2
 epochs=10
 
 [rameau-simple-ensemble-mllmSpacy-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-TFID/MLLM/Omikuji-SimpleEnsemble(Snowball/Spacy)
 language=fr
 backend=ensemble
 sources=rameau-tfidf-snowball-fr,rameau-mllm-fr,rameau-omikuji-snowball-fr
@@ -148,7 +132,7 @@ epochs=10
 
 
 [rameau-simple-ensemble-mllm-fr]
-name=RAMEAU ensemble with MLLM French
+name=RAMEAU-TFID/MLLM-SimpleEnsemble
 language=fr
 backend=ensemble
 sources=rameau-tfidf-fr:0.7775,rameau-mllm-fr:0.2225
@@ -159,7 +143,7 @@ epochs=10
 
 ### NN ensemble
 [rameau-ensemble-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-TFIDF/MLLM/Omikuji-NNensemble(Snowball)
 language=fr
 backend=nn_ensemble
 sources=rameau-tfidf-snowball-fr:0.0812,rameau-mllm-snowball-fr:0.4776,rameau-omikuji-snowball-fr:0.4412
@@ -169,7 +153,7 @@ dropout_rate=0.2
 epochs=10
 
 [rameau-ensemble-mllmSpacy-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-TFIDF/MLLM/Omikuji-NNensemble(Snowball/Spacy)
 language=fr
 backend=nn_ensemble
 sources=rameau-tfidf-snowball-fr:0.0137,rameau-mllm-fr:0.2426,rameau-omikuji-snowball-fr:0.7437
@@ -180,7 +164,7 @@ epochs=10
 
 
 [rameau-ensemble-fasttext-fr]
-name=RAMEAU ensemble with FastText French
+name=RAMEAU-TFIDF/FastText-NNensemble(Snowball)
 language=fr
 backend=nn_ensemble
 sources=rameau-tfidf-fr,rameau-fasttext-fr:2
@@ -192,7 +176,7 @@ epochs=10
 
 ### PAV
 [rameau-pav-MLLM-fr]
-name=RAMEAU PAV ensemble project with MLLM
+name=RAMEAU-TFIDF/MLLM-PAV
 language=fr
 backend=pav
 vocab=rameau
@@ -201,7 +185,7 @@ min-docs=3
 limit=100
 
 [rameau-pav-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-TFIDF/MLLM/Omikuji-PAV(Snowball)
 language=fr
 backend=pav
 sources=rameau-tfidf-snowball-fr:0.0812,rameau-mllm-snowball-fr:0.4776,rameau-omikuji-snowball-fr:0.4412
@@ -210,7 +194,7 @@ min-docs=3
 limit=100
 
 [rameau-pav-mllmSpacy-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-TFIDF/MLLM/Omikuji-PAV(Snowball/Spacy)
 language=fr
 backend=pav
 sources=rameau-tfidf-snowball-fr:0.0137,rameau-mllm-fr:0.2426,rameau-omikuji-snowball-fr:0.7437
@@ -223,7 +207,7 @@ epochs=10
 ## Same on concepts + chains (vocab rameau-chains)
 ## Analyzer = Snowball
 [rameau-chains-tfidf-snowball-fr]
-name=TF-IDF French RAMEAU with snowball lemma
+name=RAMEAU-Chains-TFIDF(Snowball)
 language=fr
 backend=tfidf
 analyzer=snowball(french)
@@ -231,7 +215,7 @@ limit=100
 vocab=rameau-chains
 
 [rameau-chains-fasttext-snowball-fr]
-name=FastText French RAMEAU
+name=RAMEAU-Chains-FastText(Snowball)
 language=fr
 backend=fasttext
 analyzer=snowball(french)
@@ -243,23 +227,15 @@ limit=100
 chunksize=24
 vocab=rameau-chains
 
-[rameau-chains-yake-snowball-fr]
-name=Yake French RAMEAU
-language=fr
-backend=yake
-analyzer=snowball(french)
-limit=100
-vocab=rameau-chains
-
 [rameau-chains-mllm-snowball-fr]
-name=RAMEAU MLLM project
+name=RAMEAU-Chains-MLLM(Snowball)
 language=fr
 backend=mllm
 analyzer=snowball(french)
 vocab=rameau-chains
 
 [rameau-chains-omikuji-snowball-fr]
-name=Omikuji Parabel French
+name=RAMEAU-Chains-Omikuji(Snowball)
 language=fr
 backend=omikuji
 analyzer=snowball(french)
@@ -268,7 +244,7 @@ vocab=rameau-chains
 
 ## Analyzer = Spacy
 [rameau-chains-tfidf-fr]
-name=TF-IDF French RAMEAU with spacy lemma
+name=RAMEAU-Chains-TFIDF(Spacy)
 language=fr
 backend=tfidf
 analyzer=spacy(fr_core_news_md)
@@ -276,7 +252,7 @@ limit=100
 vocab=rameau-chains
 
 [rameau-chains-fasttext-fr]
-name=FastText French RAMEAU
+name=RAMEAU-Chains-FastText(Spacy)
 language=fr
 backend=fasttext
 analyzer=spacy(fr_core_news_md)
@@ -288,23 +264,15 @@ limit=100
 chunksize=24
 vocab=rameau-chains
 
-[rameau-chains-yake-fr]
-name=Yake French RAMEAU
-language=fr
-backend=yake
-analyzer=spacy(fr_core_news_md)
-limit=100
-vocab=rameau-chains
-
 [rameau-chains-omikuji-parabel-fr]
-name=Omikuji Parabel French
+name=RAMEAU-Chains-Omikuji(Spacy)
 language=fr
 backend=omikuji
 analyzer=spacy(fr_core_news_md)
 vocab=rameau-chains
 
 [rameau-chains-mllm-fr]
-name=RAMEAU MLLM project
+name=RAMEAU-Chains-MLLM(Spacy)
 language=fr
 backend=mllm
 analyzer=spacy(fr_core_news_md)
@@ -313,7 +281,7 @@ vocab=rameau-chains
 
 ### Ensembles
 [rameau-chains-ensemble-mllm-fr]
-name=RAMEAU ensemble with MLLM French
+name=RAMEAU-Chains-TFIDF/MLLM-NNensemble
 language=fr
 backend=nn_ensemble
 sources=rameau-chains-tfidf-fr,rameau-chains-mllm-fr:2
@@ -323,7 +291,7 @@ dropout_rate=0.2
 epochs=10
 
 [rameau-chains-simple-ensemble-fasttext-fr]
-name=RAMEAU ensemble with Fasttext French
+name=RAMEAU-Chains-TFIDF/FastText-SimpleEnsemble
 language=fr
 backend=ensemble
 sources=rameau-chains-tfidf-fr,rameau-chains-fasttext-fr
@@ -333,7 +301,7 @@ dropout_rate=0.2
 epochs=10
 
 [rameau-chains-simple-ensemble-all-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-Chains-TFIDF/FastText/MLLM/Omikuji-SimpleEnsemble
 language=fr
 backend=ensemble
 sources=rameau-chains-tfidf-fr,rameau-chains-fasttext-fr,rameau-chains-mllm-fr,rameau-chains-omikuji-parabel-fr
@@ -343,7 +311,7 @@ dropout_rate=0.2
 epochs=10
 
 [rameau-chains-simple-ensemble-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-Chains-TFIDF/MLLM/Omikuji-SimpleEnsemble(Snowball)
 language=fr
 backend=ensemble
 sources=rameau-chains-tfidf-snowball-fr,rameau-chains-mllm-snowball-fr,rameau-chains-omikuji-snowball-fr
@@ -353,7 +321,7 @@ dropout_rate=0.2
 epochs=10
 
 [rameau-chains-simple-ensemble-mllmSpacy-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-Chains-TFIDF/MLLM/Omikuji-SimpleEnsemble(Snowball/Spacy)
 language=fr
 backend=ensemble
 sources=rameau-chains-tfidf-snowball-fr,rameau-chains-mllm-fr,rameau-chains-omikuji-snowball-fr
@@ -364,7 +332,7 @@ epochs=10
 
 
 [rameau-chains-simple-ensemble-mllm-fr]
-name=RAMEAU ensemble with MLLM French
+name=RAMEAU-Chains-TFIDF/MLLM-SimpleEnsemble(Snowball)
 language=fr
 backend=ensemble
 sources=rameau-chains-tfidf-fr,rameau-chains-mllm-fr
@@ -375,7 +343,7 @@ epochs=10
 
 ### NN ensemble
 [rameau-chains-ensemble-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-Chains-TFIDF/MLLM/Omikuji-NNensemble(Snowball)
 language=fr
 backend=nn_ensemble
 sources=rameau-chains-tfidf-snowball-fr:0.007775,rameau-chains-mllm-snowball-fr:0.004958,rameau-chains-omikuji-snowball-fr:0.987267
@@ -383,20 +351,9 @@ vocab=rameau-chains
 nodes=100
 dropout_rate=0.2
 epochs=10
-
-[rameau-chains-ensemble-mllmSpacy-allButFastext-fr]
-name=RAMEAU ensemble French
-language=fr
-backend=nn_ensemble
-sources=rameau-chains-tfidf-snowball-fr:0.007775,rameau-chains-mllm-snowball-fr:0.004958,rameau-chains-omikuji-snowball-fr:0.987267
-vocab=rameau-chains
-nodes=100
-dropout_rate=0.2
-epochs=10
-
 
 [rameau-chains-ensemble-fasttext-fr]
-name=RAMEAU ensemble with FastText French
+name=RAMEAU-Chains-TFIDF/FastText-NNensemble
 language=fr
 backend=nn_ensemble
 sources=rameau-chains-tfidf-fr,rameau-chains-fasttext-fr:2
@@ -407,8 +364,8 @@ epochs=10
 
 
 ### PAV
-[rameau-chains-pav-MLLM-fr]
-name=RAMEAU PAV ensemble project with MLLM
+[rameau-chains-pav-MLLM-fr] - Concepts + Chaines index
+name=RAMEAU-Chains-TFIDF/MLLM-PAV
 language=fr
 backend=pav
 vocab=rameau-chains
@@ -417,7 +374,7 @@ min-docs=3
 limit=100
 
 [rameau-chains-pav-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-Chains-TFIDF/MLLM/Omikuji-PAV(Snowball)
 language=fr
 backend=pav
 sources=rameau-chains-tfidf-snowball-fr:0.007775,rameau-chains-mllm-snowball-fr:0.004958,rameau-chains-omikuji-snowball-fr:0.987267
@@ -426,7 +383,7 @@ min-docs=3
 limit=100
 
 [rameau-chains-pav-mllmSpacy-allButFastext-fr]
-name=RAMEAU ensemble French
+name=RAMEAU-Chains-TFIDF/MLLM/Omikuji-PAV(Snowball/Spacy)
 language=fr
 backend=pav
 sources=rameau-chains-tfidf-snowball-fr,rameau-chains-mllm-fr,rameau-chains-omikuji-snowball-fr
